=======
CHANGES
=======

3.4.3 (unreleased)
------------------

- Remove deprecated code and thus remove dependency on zope.deferredimport.


3.4.2 (2009-01-27)
------------------

- Substitute zope.app.zapi by direct calls to its wrapped apis. See
  bug 219302.

- Fixed author email and home page.


3.4.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-24)
------------------

- Initial release independent of the main Zope tree.